Blackpurl/src/objects/Summary_Block__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Name__c</fullName>
        <label>Block Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Order_Number__c</fullName>
        <label>Filter Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Search_Additional_Field_Json__c</fullName>
        <label>Home Search Additional Field Json</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Search_Filter_Json__c</fullName>
        <label>Home Search Filter Json</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Card__c</fullName>
        <label>Summary Card</label>
        <referenceTo>Summary_Card__mdt</referenceTo>
        <relationshipLabel>Summary Blocks</relationshipLabel>
        <relationshipName>Summary_Blocks</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Summary Block</label>
    <pluralLabel>Summary Blocks</pluralLabel>
</CustomObject>